# BioReagentMS

./: .gitignore  Git操作指南.txt  README.md  env.example
agent-BioReagentMS/: .env.example  README.md  database.py  langgraph.json  main.py  pyproject.toml
agent-BioReagentMS/app/agent/: api_client.py  reagent_assistant.py
agent-BioReagentMS/app/common/: client.py
agent-BioReagentMS/app/common/tools/: __init__.py  batch.py  delivery.py  knowledge.py  operation.py  reagent.py  report.py  supplier.py  warehouse.py  warning.py  web_search_tool.py
backend-BioReagentMS/: DEPENDENCY_FIX.md  build-install.bat  pom.xml
backend-BioReagentMS/common/: pom.xml
backend-BioReagentMS/pojo/: pom.xml
backend-BioReagentMS/server/: pom.xml
backend-BioReagentMS/server/src/main/resources/: application.yml
backend-BioReagentMS/server/src/main/resources/mapper/: DeliveryOrderMapper.xml  OperationMapper.xml  OutboundOrderAuditMapper.xml  PermissionMapper.xml  (+9 more)
frontend-BioReagentMS/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend-BioReagentMS/src/: main.js
frontend-BioReagentMS/src/layout/: MainLayout.vue
frontend-BioReagentMS/src/router/: index.js
frontend-BioReagentMS/src/stores/: auth.js
frontend-BioReagentMS/src/styles/: global.css
frontend-BioReagentMS/src/utils/: request.js
frontend-BioReagentMS/src/views/: Batches.vue  Chat.vue  Dashboard.vue  DeliveryAudit.vue  DeliveryOut.vue  Login.vue  Operations.vue  ReagentDetail.vue  Reagents.vue  Reports.vue  Suppliers.vue  Users.vue  WarehouseIn.vue  Warnings.vue  WebSearch.vue
(+135 files in other folders)
