[project]
name = "agent-bioreagentms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.3.11",
    "langchain-deepseek>=1.1.0",
    "langchain-openai>=1.3.3",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.7",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "langgraph-cli[inmem]>=0.4.30",
    "python-dotenv>=1.2.2",
]
