[project]
name = "agent-bioreagentms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiomysql>=0.3.2",
    "chromadb>=1.5.9",
    "fastapi>=0.139.2",
    "langchain>=1.3.11",
    "langchain-deepseek>=1.1.0",
    "langchain-openai>=1.3.3",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.7",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "langgraph-cli[inmem]>=0.4.30",
    "ollama>=0.6.2",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.50.0",
]
